<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_box_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_box2_label"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/responseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@+id/textBox2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <!--        android:inputType="TODO"-->
    <!--        android:autofillHints="AUTOFILL_HINT_NAME" />-->
    <!--
    <EditText
        android:id="@+id/response2EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_hint"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textBox2"
        app:layout_constraintLeft_toRightOf="@id/responseEditText"
        app:layout_constraintRight_toRightOf="parent"/>  -->
    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button"
        android:textColor="#318214"
        android:textAllCaps="true"
        android:clickable="true"
        android:onClick="submit"
        app:layout_constraintTop_toBottomOf="@+id/responseEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/cornerBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cornerbox1"
        android:onClick="textClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cornerBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cornerbox2"
        android:onClick="textClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cornerBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cornerbox3"
        android:onClick="textClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cornerBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="textClicked"
        android:text="@string/cornerbox4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/seekBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="textClicked"
        android:text="@string/seekBarLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <SeekBar
        android:id="@+id/simpleSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarLabel"
        tools:ignore="MissingConstraints"
        android:max="40"/>

</androidx.constraintlayout.widget.ConstraintLayout>